# UsageMonitor

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  requirements-dev.txt  requirements.txt  ruff.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: README.md  adding-a-provider.md  architecture.md  commands.md  configuration.md  credits.md  installation.md  quality.md
docs/providers/: README.md  abacus.md  anthropic.md  antigravity.md  claude.md  codex.md  copilot.md  cursor.md  deepgram.md  deepseek.md  devin.md  elevenlabs.md  gemini.md  grok.md  groq.md  kimi.md  kimik2.md  llmproxy.md  minimax.md  mistral.md  moonshot.md  ollama.md  openai.md  opencode-go.md  openrouter.md  perplexity.md  venice.md  windsurf.md  zai.md
docs/widgets/: README.md  kde.md  waybar.md
releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.2.0.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.3.md  v0.4.0.md  v0.5.0.md  v0.5.1.md  v0.5.2.md  v0.6.0.md  v0.6.1.md  v0.7.0.md  v0.7.1.md
scripts/: check_quality.py
usage-monitor-cli/: Cargo.toml
usage-monitor-cli/assets/kde/package/: metadata.json
usage-monitor-cli/assets/kde/package/contents/code/: usage_monitor_kde.py
usage-monitor-cli/assets/kde/package/contents/config/: main.xml
usage-monitor-cli/assets/kde/package/contents/ui/: FullPopup.qml  SettingsBackend.qml  configProviders.qml  main.qml
usage-monitor-cli/src/: cli.rs  commands.rs  config.rs  dynamic.rs  error.rs  fetch.rs  lib.rs  main.rs  output.rs
usage-monitor-cli/src/model/: credits.rs  mod.rs
usage-monitor-cli/src/provider/: abacus.rs  anthropic.rs  antigravity.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  deepgram.rs  deepseek.rs  devin.rs  elevenlabs.rs  gemini.rs  grok.rs  groq.rs  kimi.rs  kimik2.rs  minimax.rs  mistral.rs  mod.rs  moonshot.rs  ollama.rs  openai.rs  opencode_go.rs  openrouter.rs  perplexity.rs  registry.rs  venice.rs  windsurf.rs  zai.rs
usage-monitor-cli/src/widget/: install.rs  mod.rs  model.rs  payload.rs  tests.rs
usage-monitor-cli/tests/: cli.rs
usage-monitor-cli/tests/support/: mod.rs
usage-monitor-core/: Cargo.toml
usage-monitor-core/src/: config.rs  error.rs  lib.rs
usage-monitor-core/src/model/: cost.rs  mod.rs  usage.rs
usage-monitor-core/src/provider/: abacus.rs  anthropic.rs  antigravity.rs  claude.rs  codex.rs  copilot.rs  cursor.rs  devin.rs  elevenlabs.rs  gemini.rs  grok.rs  kimi.rs  kimik2.rs  llmproxy.rs  minimax.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  opencode_go.rs  perplexity.rs  proto.rs  registry.rs  windsurf.rs  zai.rs
widgets/kde/package/: metadata.json
widgets/kde/package/contents/code/: usage_monitor_kde.py
widgets/kde/package/contents/config/: config.qml
widgets/kde/package/contents/ui/: UsagePage.qml  configGeneral.qml  configOrder.qml  main.qml
widgets/kde/tests/: test_usage_monitor_kde.py
widgets/waybar/: usage-monitor-waybar  usage_monitor_waybar.py
widgets/waybar/tests/: test_waybar_wrapper.py
