[workspace]
resolver = "3"
members = [
    "usage-monitor-core",
    "usage-monitor-cli",
]

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
toml = "0.8"
url = "2"

# Dev dependencies
wiremock = "0.6"
pretty_assertions = "1"
tokio-test = "0.4"
