[workspace]
resolver = "3"
members = [
    "usage-monitor-cli",
]

[workspace.package]
version = "0.7.1"
edition = "2024"
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/prodesert22/UsageMonitor"
homepage = "https://github.com/prodesert22/UsageMonitor"
readme = "README.md"
keywords = ["ai", "usage", "monitor", "cli"]
categories = ["command-line-utilities"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
toml = "0.8"
url = "2"
futures-util = "0.3"

# Dev dependencies
wiremock = "0.6"
pretty_assertions = "1"
tokio-test = "0.4"
tempfile = "3"
