[package]
name = "usage-monitor-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
usage-monitor-core = { path = "../usage-monitor-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true
clap = { version = "4", features = ["derive"] }
anyhow = "1"
