[package]
name = "usage-monitor-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
toml.workspace = true
url.workspace = true
futures-util.workspace = true
async-trait = "0.1"

[dev-dependencies]
wiremock.workspace = true
pretty_assertions.workspace = true
tokio-test.workspace = true
